2007-09-18  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/bm-config.el: make package optional

2007-04-11  Yann Hodique  <Yann.Hodique@lifl.fr>

	* icicles: package is now maintained separately

2007-04-09  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/magpie.el: initial checkin

	* lib/javascript.el: initial checkin

	* dotemacs-cust.el (custom-set-variables): disable auto update for ecb methods

	* config/python-config.el: initial checkin

	* config/cc-config.el: initial checkin

	* config/bm-config.el: initial checkin

2007-03-07  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el: disable broken signature

	* dotemacs.el: add code for using <Multi_key> as an alias for C-x 8

	* config/buffer-config.el (ibuffer-saved-filter-groups): fix circe group

2007-02-08  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el: added useful wrapper to recursive-edit

	* config/org-config.el (org-agenda): don't minimize ecb compilation window

2007-01-27  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/psvn.el: update from mainstream

	* lib/outline-magic.el: initial checkin

	* lib/lua-mode.el: initial checkin

	* lib/blank-mode.el: initial checkin

	* dotemacs.el (savehist): save kill-ring accross sessions

	* custom/autoloads.el (autoload): autoload blanc-mode and predictive

	* config/winring-config.el (eval-when-compile): fix compilation

	* config/outline-config.el: initial checkin

	* config/latex-config.el (outline-config): configure outline for LaTeX-mode

	* config/buffer-config.el (eval-when-compile): fix compilation

2006-12-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/paredit.el: upgrade to latest beta

	* dotemacs.el: add viewport scrolling
	setup *scratch* buffer from the start

	* custom/patches.el (add-mhook): add &optional arguments

	* config/winring-config.el (winring): fix loading order

	* config/lisp-config.el (yh/lisp-hook): remove reference to sexp hilighting

2006-12-12  Yann Hodique  <Yann.Hodique@lifl.fr>
