@@ -129,7 +129,7 @@
  '(mouse-yank-at-point t)
  '(next-line-add-newlines nil)
  '(org-CUA-compatible t)
- '(org-agenda-custom-commands (quote (("x" tags-todo "URGENT|NORMAL/NEXTACTION|WAITING" nil) ("X" tags-todo "URGENT/NEXTACTION|WAITING" nil))))
+ '(org-agenda-custom-commands (quote (("x" tags-todo #("URGENT|NORMAL/NEXTACTION|WAITING" 0 32 (face org-warning)) nil) ("X" tags-todo #("URGENT/NEXTACTION|WAITING" 0 25 (face org-warning)) nil))))
  '(org-agenda-skip-archived-trees nil)
  '(org-disputed-keys (quote (([(shift up)] . [(meta p)]) ([(shift down)] . [(meta n)]) ([(shift left)] . [(meta -)]) ([(shift right)] . [(meta +)]) ([(control shift right)] . [(control meta +)]) ([(control shift left)] . [(control meta -)]))))
  '(org-replace-disputed-keys t)
@@ -189,6 +189,7 @@
  '(temp-buffer-resize-mode t)
  '(tempo-insert-region nil)
  '(tempo-interactive t)
+ '(tla-arch-branch (quote baz))
  '(tool-bar-mode nil nil (tool-bar))
  '(tooltip-frame-parameters (quote ((name . "tooltip") (internal-border-width . 1) (border-width . 0))))
  '(tooltip-gud-tips-p t)
@@ -199,6 +200,7 @@
  '(uniquify-buffer-name-style (quote post-forward-angle-brackets) nil (uniquify))
  '(uniquify-strip-common-suffix t)
  '(vc-follow-symlinks t)
+ '(vc-handled-backends nil)
  '(vc-make-backup-files t)
  '(view-diary-entries-initially t)
  '(visible-bell t)
@@ -240,7 +242,7 @@
  '(font-lock-builtin-face ((((class color) (background dark)) (:foreground "lightsteelblue"))))
  '(font-lock-comment-delimiter-face ((default (:inherit font-lock-comment-face)) (((class color) (min-colors 16)) (:foreground "red"))))
  '(font-lock-comment-face ((t (:foreground "gray"))))
- '(font-lock-doc-face ((t (:foreground "lightgreen"))))
+ '(font-lock-doc-face ((t (:inherit font-lock-comment-face))))
  '(font-lock-floatnumber-face ((((class color) (background dark)) (:foreground "yellow4"))))
  '(font-lock-function-name-face ((((class color) (background dark)) (:foreground "lightblue2"))))
  '(font-lock-hexnumber-face ((((class color) (background dark)) (:foreground "cyan"))))
